# LLMmcp

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: mcp.example.json
docs/: add_new_server.md  mcp_tool_resource_handling_report.md  phase_plan.md
openai_tools/: __init__.py  web_tools.py
scripts/: export_openai_tools.py  health_check.py  run_browser.py  run_fetch.py  run_file_reader.py  run_github_search.py  run_huggingface.py  run_local_file.py  run_modelscope.py  run_openai_tool.py  run_paper.py  run_search.py  run_time.py  run_video.py
servers/: __init__.py
servers/browser/: README.md  schemas.py  server.py
servers/fetch/: README.md  __init__.py  schemas.py  server.py
servers/file_reader/: README.md  schemas.py  server.py
servers/github_search/: README.md  __init__.py  schemas.py  server.py
servers/huggingface/: README.md  __init__.py  (+2 more)
shared/: __init__.py  errors.py  http_headers.py  logging.py  permissions.py  responses.py  settings.py  site_auth.py
tests/: test_browser_schemas.py  test_browser_server.py  test_fetch_schemas.py  test_fetch_server.py  test_file_reader_schemas.py  test_file_reader_server.py  test_github_search_schemas.py  test_github_search_server.py  test_huggingface_schemas.py  test_huggingface_server.py  test_local_file_schemas.py  test_local_file_server.py  test_modelscope_schemas.py  test_modelscope_server.py  test_openai_tools.py  test_paper_schemas.py  test_paper_server.py  test_search_schemas.py  test_search_server.py  test_settings.py  test_time_schemas.py  test_time_server.py  test_video_server.py
(+24 files in other folders)
