[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmmcp"
version = "0.1.0"
description = "Minimal MCP servers for search, fetch, and browser access"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "ddgs>=9.0.0",
  "httpx>=0.27.0",
  "mcp>=1.27.0",
  "pillow>=10.3.0",
  "playwright>=1.45.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pypdf>=4.2.0",
  "pytesseract>=0.3.10",
  "rapidocr-onnxruntime>=1.4.4",
  "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.4.0",
]

[tool.setuptools]
packages = [
  "openai_tools",
  "servers",
  "servers.search",
  "servers.fetch",
  "servers.browser",
  "servers.local_file",
  "servers.github_search",
  "servers.time",
  "servers.file_reader",
  "servers.video",
  "servers.paper",
  "shared",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
